--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     <main>
-        <section>
+        <section id="menu">
             <h2>Menu</h2>
             <div>
                 <article>
@@ -47,7 +47,7 @@
                 </article>
             </div>
         </section>
-        <section>
+        <section id="order">
             <h2>Place Your Order</h2>
             <form>
                 <div>
@@ -72,4 +72,5 @@
         </p>
     </footer>
 </body>
+
 </html>
