Add quantity inputs for menu items in order form
Updated the order form to include quantity inputs for each menu item.

--- a/menu.html
+++ b/menu.html
@@ -51,7 +51,9 @@
             <h2>Place Your Order</h2>
             <form>
                 <div>
-                   <p>Enter Your Order<p> <input type="text" maxlength="3" minlength="0">
+                   <label for="burger">Burger Quantity</label> <input type="number" name="burger" minlength="0">
+                   <label for="taco">Taco Quantity</label> <input type="number" name="taco" minlength="0">
+                   <label for="steak">Steak Quantity</label> <input type="number" name="steak"  minlength="0">
                 </div>
                 <div>
                     <label>Water</label><input type="checkbox">
@@ -74,3 +76,4 @@
 </body>
 
 </html>
+
