--- a/menu.html
+++ b/menu.html
@@ -51,9 +51,9 @@
             <h2>Place Your Order</h2>
             <form>
                 <div>
-                   <label for="burger">Burger Quantity</label> <input type="number" name="burger" minlength="0">
-                   <label for="taco">Taco Quantity</label> <input type="number" name="taco" minlength="0">
-                   <label for="steak">Steak Quantity</label> <input type="number" name="steak"  minlength="0">
+                   <label for="burger">Burger Quantity</label> <input type="number" name="burger" min="0">
+                   <label for="taco">Taco Quantity</label> <input type="number" name="taco" min="0">
+                   <label for="steak">Steak Quantity</label> <input type="number" name="steak"  min="0">
                 </div>
                 <div>
                     <label>Water</label><input type="checkbox">
@@ -76,4 +76,5 @@
 </body>
 
 </html>
+
 
