--- a/menu.html
+++ b/menu.html
@@ -51,17 +51,20 @@
             <h2>Place Your Order</h2>
             <form>
                 <div>
-                   <label for="burger">Burger Quantity</label> <input type="number" name="burger" min="0">
-                   <label for="taco">Taco Quantity</label> <input type="number" name="taco" min="0">
+                   <label for="burger">Burger Quantity</label> <input type="number" name="burger" min="0"><br><br>
+                   <label for="taco">Taco Quantity</label> <input type="number" name="taco" min="0"><br><br>
                    <label for="steak">Steak Quantity</label> <input type="number" name="steak"  min="0">
                 </div>
+                <br>
                 <div>
                     <label>Water</label><input type="checkbox">
                     <label>Cold Drink</label><input type="checkbox">
                 </div>
+                <br>
                 <div>
                     <label>Special Request</label><textarea rows="4" cols="12"></textarea>
                 </div>
+                <br>
                 <div>
                     <input type="submit" value="Go to Checkout">
                 </div>
@@ -76,5 +79,6 @@
 </body>
 
 </html>
+
 
 
