--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <div>
-            <img src="r_logo.png" alt="Restaurant Logo">
+            <img width="150" src="r_logo.png" alt="Restaurant Logo">
         </div>
         <div>
             <h1>JIMMI'S KITCHEN</h1>
@@ -27,21 +27,21 @@
             <h2>Menu</h2>
             <div>
                 <article>
-                    <img src="taco.jpg" alt="Taco">
+                    <img width=" 70" src="taco.jpg" alt="Taco">
                     <h3>Taco</h3>
                     <p>A traditional Mexican dish made of a small, hand-sized tortilla (corn or wheat) that is folded or rolled around a filling. </p>
                 </article>
             </div>
             <div>
                 <article>
-                    <img src="burger.jpg" alt="Burger">
+                    <img width="70" src="burger.jpg" alt="Burger">
                     <h3>Burger</h3>
                     <p>A burger is a popular sandwich featuring a cooked meat patty nestled between two halves of a bun layered with toppings lettuce, tomato, onion, cheese, and sauces.</p>
                 </article>
             </div>
             <div>
                 <article>
-                    <img src="steak.jpg" alt="Steak">
+                    <img width="70" src="steak.jpg" alt="Steak">
                     <h3>Steak</h3>
                     <p>A thick slice of meat cut across the muscle fibers from larger primal cuts cooked quickly over high heat.</p>
                 </article>
@@ -79,6 +79,7 @@
 </body>
 
 </html>
+
 
 
 
