--- a/menu.html
+++ b/menu.html
@@ -29,6 +29,7 @@
                 <article>
                     <img width=" 70" src="taco.jpg" alt="Taco">
                     <h3>Taco</h3>
+                    <p>Price:$5.99</p>
                     <p>A traditional Mexican dish made of a small, hand-sized tortilla (corn or wheat) that is folded or rolled around a filling. </p>
                 </article>
             </div>
@@ -36,6 +37,7 @@
                 <article>
                     <img width="70" src="burger.jpg" alt="Burger">
                     <h3>Burger</h3>
+                    <p>Price:$8.99</p>
                     <p>A burger is a popular sandwich featuring a cooked meat patty nestled between two halves of a bun layered with toppings lettuce, tomato, onion, cheese, and sauces.</p>
                 </article>
             </div>
@@ -43,6 +45,7 @@
                 <article>
                     <img width="70" src="steak.jpg" alt="Steak">
                     <h3>Steak</h3>
+                    <p>Price:$12.99</p>
                     <p>A thick slice of meat cut across the muscle fibers from larger primal cuts cooked quickly over high heat.</p>
                 </article>
             </div>
@@ -79,6 +82,7 @@
 </body>
 
 </html>
+
 
 
 
